--- a/index.html
+++ b/index.html
@@ -2,15 +2,106 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
+  <title>rok gardN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
-  <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
-<body>
 
+<body>
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
+  <header role="banner">
+    <div class="grid gutter-1-2 pad-t-1-2">
+      <div class="unit unit-xs-1 unit-m-1 unit-l-1-2 text-center">
+        <h1 class="push-0 jp yotta"><i class="not-italic" lang="ja">枯山水</i></h1>
+        <h2 class="kilo eng push-none pad-b-1-2">Rock Gardens</h2>
+      </div>
+      <nav class="unit unit-xs-1 unit-m-1 unit-l-1-2 nav" role="navigation" id="nav">
+        <ul class="text-center push-0 pad-b-1-2 pad-t list-group-inline">
+          <li class="kilo"><a href="#">Viewing</a></li>
+          <li class="kilo gutter-1-2"><a href="#">Gravel</a></li>
+          <li class="kilo"><a href="#">Symbolism</a></li>
+        </ul>
+      </nav>
+    </div>
+    <img src="images/banner.svg" alt="" class="img-flex push">
+  </header>
+
+  <main role="main" id="main">
+    <article class="pad-b-1-2">
+      <div class="pad-t">
+        <hr>
+      </div>
+      <div class="wrapper gutter">
+        <h2 class="text-center jp yotta push-none not-bold">自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+        <h2 class="mega eng gutter-2 text-center pad-t-1-2 not-bold">Imitate the intimate essence of nature & discover the true meaning of life.</h2>
+      </div>
+      <div class="pad-b-1-4">
+        <hr>
+      </div>
+    </article>
+    <div class="grid gutter-1-4 grid-stretch">
+      <div class="unit unit-xs-1 unit-m-1-2 unit-l-1-3 unit-content-distribute" id="viewing">
+        <div class="island-1-4">
+          <div class="embed embed-3by2 pad-b-1-4">
+            <img src="images/viewing.svg" alt="" class="img-flex pad-b-1-4 embed-item">
+          </div>
+          <div class="pad-t-1-4 pad-b-1-2">
+            <h2 class="jp exa push-none">閲覧</h2>
+            <div class="mega eng push-none pad-b-1-2">Viewing</div>
+            <p class="push-0 pad-b-1-2">A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+            <a href="#" class="btn-ghost btn island-1-4 pad-b-1-4">Learn more about Viewing</a>
+          </div>
+        </div>
+      </div>
+      <div class="unit unit-xs-1 unit-m-1-2 unit-l-1-3 unit-content-distribute" id="gravel">
+        <div class="island-1-4">
+          <div class="embed embed-3by2 pad-b-1-4">
+            <img src="images/gravel.svg" alt="" class="img-flex pad-b-1-4 embed-item">
+          </div>
+          <div class="pad-t-1-4 pad-b-1-2">
+            <h2 class="jp exa push-none">砂利</h2>
+            <h2 class="mega eng push-none pad-b-1-2">Gravel</h2>
+            <p class="push-0 pad-b-1-2">Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+            <a href="#" class="btn-ghost btn island-1-4 pad-b-1-4">Learn more about Gravel</a>
+          </div>
+        </div>
+      </div>
+      <div class="unit unit-xs-1 unit-m-1 unit-l-1-3 pad-t-1-4 pad-b push unit-content-distribute" id="symbolism">
+        <div class="grid grid-middle">
+          <div class="unit unit-xs-1 unit-m-2-3 unit-l-1">
+            <div class="embed embed-3by2">
+              <img src="images/symbolism.svg" alt="" class="img-flex pad-b-1-4 island-1-4 embed-item">
+            </div>
+          </div>
+          <div class="unit unit-xs-1 unit-m-1-3 unit-l-1 island-1-4 pad-b-1-2 pad-t-1-4">
+            <h2 class="jp exa push-none">象徴主義</h2>
+            <h2 class="mega eng push-none pad-b-1-2">Symbolism</h2>
+            <p class="push-0 pad-b-1-2">In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+            <a href="#" class="btn-ghost btn island-1-4 block">Learn more about Symbolism</a>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </main>
+
+  <div>
+    <hr class="push-0">
+  </div>
+
+  <footer class="island-1-2" role="contentinfo">
+    <small>© 794 Heian Period</small>
+  </footer>
 </body>
 </html>
